Parse.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
prog' -> . prog [ # ]
## Transitions:
-- On CLASSE shift to state 1
-- On prog shift to state 150
-- On list(classe) shift to state 151
-- On classe shift to state 154
## Reductions:
-- On LBRACKET
--   reduce production list(classe) ->

State 1:
## Known stack suffix:
## CLASSE
## LR(1) items:
classe -> CLASSE . CLASSNAME factoredVarParamList option(extends) IS LBRACKET classBody RBRACKET [ LBRACKET CLASSE ]
## Transitions:
-- On CLASSNAME shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## CLASSE CLASSNAME
## LR(1) items:
classe -> CLASSE CLASSNAME . factoredVarParamList option(extends) IS LBRACKET classBody RBRACKET [ LBRACKET CLASSE ]
## Transitions:
-- On LPAREN shift to state 3
-- On factoredVarParamList shift to state 21
## Reductions:

State 3:
## Known stack suffix:
## LPAREN
## LR(1) items:
factoredVarParamList -> LPAREN . loption(separated_nonempty_list(COMMA,factoredVarParam)) RPAREN [ IS EXTENDS COLON ]
## Transitions:
-- On VAR shift to state 4
-- On separated_nonempty_list(COMMA,factoredVarParam) shift to state 5
-- On loption(separated_nonempty_list(COMMA,factoredVarParam)) shift to state 6
-- On factoredVarParam shift to state 8
-- On boption(VAR) shift to state 11
## Reductions:
-- On ID COLON
--   reduce production boption(VAR) ->
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,factoredVarParam)) ->

State 4:
## Known stack suffix:
## VAR
## LR(1) items:
boption(VAR) -> VAR . [ ID COLON ]
## Transitions:
## Reductions:
-- On ID COLON
--   reduce production boption(VAR) -> VAR

State 5:
## Known stack suffix:
## separated_nonempty_list(COMMA,factoredVarParam)
## LR(1) items:
loption(separated_nonempty_list(COMMA,factoredVarParam)) -> separated_nonempty_list(COMMA,factoredVarParam) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,factoredVarParam)) -> separated_nonempty_list(COMMA,factoredVarParam)

State 6:
## Known stack suffix:
## LPAREN loption(separated_nonempty_list(COMMA,factoredVarParam))
## LR(1) items:
factoredVarParamList -> LPAREN loption(separated_nonempty_list(COMMA,factoredVarParam)) . RPAREN [ IS EXTENDS COLON ]
## Transitions:
-- On RPAREN shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## LPAREN loption(separated_nonempty_list(COMMA,factoredVarParam)) RPAREN
## LR(1) items:
factoredVarParamList -> LPAREN loption(separated_nonempty_list(COMMA,factoredVarParam)) RPAREN . [ IS EXTENDS COLON ]
## Transitions:
## Reductions:
-- On IS EXTENDS COLON
--   reduce production factoredVarParamList -> LPAREN loption(separated_nonempty_list(COMMA,factoredVarParam)) RPAREN

State 8:
## Known stack suffix:
## factoredVarParam
## LR(1) items:
separated_nonempty_list(COMMA,factoredVarParam) -> factoredVarParam . [ RPAREN ]
separated_nonempty_list(COMMA,factoredVarParam) -> factoredVarParam . COMMA separated_nonempty_list(COMMA,factoredVarParam) [ RPAREN ]
## Transitions:
-- On COMMA shift to state 9
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,factoredVarParam) -> factoredVarParam

State 9:
## Known stack suffix:
## factoredVarParam COMMA
## LR(1) items:
separated_nonempty_list(COMMA,factoredVarParam) -> factoredVarParam COMMA . separated_nonempty_list(COMMA,factoredVarParam) [ RPAREN ]
## Transitions:
-- On VAR shift to state 4
-- On separated_nonempty_list(COMMA,factoredVarParam) shift to state 10
-- On factoredVarParam shift to state 8
-- On boption(VAR) shift to state 11
## Reductions:
-- On ID COLON
--   reduce production boption(VAR) ->

State 10:
## Known stack suffix:
## factoredVarParam COMMA separated_nonempty_list(COMMA,factoredVarParam)
## LR(1) items:
separated_nonempty_list(COMMA,factoredVarParam) -> factoredVarParam COMMA separated_nonempty_list(COMMA,factoredVarParam) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,factoredVarParam) -> factoredVarParam COMMA separated_nonempty_list(COMMA,factoredVarParam)

State 11:
## Known stack suffix:
## boption(VAR)
## LR(1) items:
factoredVarParam -> boption(VAR) . loption(separated_nonempty_list(COMMA,ID)) COLON returnedType [ RPAREN COMMA ]
## Transitions:
-- On ID shift to state 12
-- On separated_nonempty_list(COMMA,ID) shift to state 15
-- On loption(separated_nonempty_list(COMMA,ID)) shift to state 16
## Reductions:
-- On COLON
--   reduce production loption(separated_nonempty_list(COMMA,ID)) ->

State 12:
## Known stack suffix:
## ID
## LR(1) items:
separated_nonempty_list(COMMA,ID) -> ID . [ COLON ]
separated_nonempty_list(COMMA,ID) -> ID . COMMA separated_nonempty_list(COMMA,ID) [ COLON ]
## Transitions:
-- On COMMA shift to state 13
## Reductions:
-- On COLON
--   reduce production separated_nonempty_list(COMMA,ID) -> ID

State 13:
## Known stack suffix:
## ID COMMA
## LR(1) items:
separated_nonempty_list(COMMA,ID) -> ID COMMA . separated_nonempty_list(COMMA,ID) [ COLON ]
## Transitions:
-- On ID shift to state 12
-- On separated_nonempty_list(COMMA,ID) shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## ID COMMA separated_nonempty_list(COMMA,ID)
## LR(1) items:
separated_nonempty_list(COMMA,ID) -> ID COMMA separated_nonempty_list(COMMA,ID) . [ COLON ]
## Transitions:
## Reductions:
-- On COLON
--   reduce production separated_nonempty_list(COMMA,ID) -> ID COMMA separated_nonempty_list(COMMA,ID)

State 15:
## Known stack suffix:
## separated_nonempty_list(COMMA,ID)
## LR(1) items:
loption(separated_nonempty_list(COMMA,ID)) -> separated_nonempty_list(COMMA,ID) . [ COLON ]
## Transitions:
## Reductions:
-- On COLON
--   reduce production loption(separated_nonempty_list(COMMA,ID)) -> separated_nonempty_list(COMMA,ID)

State 16:
## Known stack suffix:
## boption(VAR) loption(separated_nonempty_list(COMMA,ID))
## LR(1) items:
factoredVarParam -> boption(VAR) loption(separated_nonempty_list(COMMA,ID)) . COLON returnedType [ RPAREN COMMA ]
## Transitions:
-- On COLON shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## boption(VAR) loption(separated_nonempty_list(COMMA,ID)) COLON
## LR(1) items:
factoredVarParam -> boption(VAR) loption(separated_nonempty_list(COMMA,ID)) COLON . returnedType [ RPAREN COMMA ]
## Transitions:
-- On COLON shift to state 18
-- On returnedType shift to state 20
## Reductions:

State 18:
## Known stack suffix:
## COLON
## LR(1) items:
returnedType -> COLON . CLASSNAME [ VAR RPAREN RBRACKET IS DEF COMMA ASSIGN ]
## Transitions:
-- On CLASSNAME shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## COLON CLASSNAME
## LR(1) items:
returnedType -> COLON CLASSNAME . [ VAR RPAREN RBRACKET IS DEF COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On VAR RPAREN RBRACKET IS DEF COMMA ASSIGN
--   reduce production returnedType -> COLON CLASSNAME

State 20:
## Known stack suffix:
## boption(VAR) loption(separated_nonempty_list(COMMA,ID)) COLON returnedType
## LR(1) items:
factoredVarParam -> boption(VAR) loption(separated_nonempty_list(COMMA,ID)) COLON returnedType . [ RPAREN COMMA ]
## Transitions:
## Reductions:
-- On RPAREN COMMA
--   reduce production factoredVarParam -> boption(VAR) loption(separated_nonempty_list(COMMA,ID)) COLON returnedType

State 21:
## Known stack suffix:
## CLASSE CLASSNAME factoredVarParamList
## LR(1) items:
classe -> CLASSE CLASSNAME factoredVarParamList . option(extends) IS LBRACKET classBody RBRACKET [ LBRACKET CLASSE ]
## Transitions:
-- On EXTENDS shift to state 22
-- On option(extends) shift to state 24
-- On extends shift to state 149
## Reductions:
-- On IS
--   reduce production option(extends) ->

State 22:
## Known stack suffix:
## EXTENDS
## LR(1) items:
extends -> EXTENDS . CLASSNAME [ IS ]
## Transitions:
-- On CLASSNAME shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## EXTENDS CLASSNAME
## LR(1) items:
extends -> EXTENDS CLASSNAME . [ IS ]
## Transitions:
## Reductions:
-- On IS
--   reduce production extends -> EXTENDS CLASSNAME

State 24:
## Known stack suffix:
## CLASSE CLASSNAME factoredVarParamList option(extends)
## LR(1) items:
classe -> CLASSE CLASSNAME factoredVarParamList option(extends) . IS LBRACKET classBody RBRACKET [ LBRACKET CLASSE ]
## Transitions:
-- On IS shift to state 25
## Reductions:

State 25:
## Known stack suffix:
## CLASSE CLASSNAME factoredVarParamList option(extends) IS
## LR(1) items:
classe -> CLASSE CLASSNAME factoredVarParamList option(extends) IS . LBRACKET classBody RBRACKET [ LBRACKET CLASSE ]
## Transitions:
-- On LBRACKET shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## CLASSE CLASSNAME factoredVarParamList option(extends) IS LBRACKET
## LR(1) items:
classe -> CLASSE CLASSNAME factoredVarParamList option(extends) IS LBRACKET . classBody RBRACKET [ LBRACKET CLASSE ]
## Transitions:
-- On VAR shift to state 27
-- On DEF shift to state 35
-- On methode shift to state 137
-- On factoredAttributes shift to state 138
-- On constructor shift to state 139
-- On classBody shift to state 140
-- On anyClassDecl shift to state 142
-- On anyClDeclAndConstructor shift to state 144
## Reductions:

State 27:
## Known stack suffix:
## VAR
## LR(1) items:
factoredAttributes -> VAR . boption(STATIC) list(ID) COLON returnedType [ VAR RBRACKET DEF ]
## Transitions:
-- On STATIC shift to state 28
-- On boption(STATIC) shift to state 29
## Reductions:
-- On ID COLON
--   reduce production boption(STATIC) ->

State 28:
## Known stack suffix:
## STATIC
## LR(1) items:
boption(STATIC) -> STATIC . [ OVERRIDE ID COLON ]
## Transitions:
## Reductions:
-- On OVERRIDE ID COLON
--   reduce production boption(STATIC) -> STATIC

State 29:
## Known stack suffix:
## VAR boption(STATIC)
## LR(1) items:
factoredAttributes -> VAR boption(STATIC) . list(ID) COLON returnedType [ VAR RBRACKET DEF ]
## Transitions:
-- On ID shift to state 30
-- On list(ID) shift to state 32
## Reductions:
-- On COLON
--   reduce production list(ID) ->

State 30:
## Known stack suffix:
## ID
## LR(1) items:
list(ID) -> ID . list(ID) [ COLON ]
## Transitions:
-- On ID shift to state 30
-- On list(ID) shift to state 31
## Reductions:
-- On COLON
--   reduce production list(ID) ->

State 31:
## Known stack suffix:
## ID list(ID)
## LR(1) items:
list(ID) -> ID list(ID) . [ COLON ]
## Transitions:
## Reductions:
-- On COLON
--   reduce production list(ID) -> ID list(ID)

State 32:
## Known stack suffix:
## VAR boption(STATIC) list(ID)
## LR(1) items:
factoredAttributes -> VAR boption(STATIC) list(ID) . COLON returnedType [ VAR RBRACKET DEF ]
## Transitions:
-- On COLON shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## VAR boption(STATIC) list(ID) COLON
## LR(1) items:
factoredAttributes -> VAR boption(STATIC) list(ID) COLON . returnedType [ VAR RBRACKET DEF ]
## Transitions:
-- On COLON shift to state 18
-- On returnedType shift to state 34
## Reductions:

State 34:
## Known stack suffix:
## VAR boption(STATIC) list(ID) COLON returnedType
## LR(1) items:
factoredAttributes -> VAR boption(STATIC) list(ID) COLON returnedType . [ VAR RBRACKET DEF ]
## Transitions:
## Reductions:
-- On VAR RBRACKET DEF
--   reduce production factoredAttributes -> VAR boption(STATIC) list(ID) COLON returnedType

State 35:
## Known stack suffix:
## DEF
## LR(1) items:
constructor -> DEF . CLASSNAME factoredVarParamList option(superclasseCall) IS block [ VAR RBRACKET DEF ]
methode -> DEF . boption(STATIC) boption(OVERRIDE) ID factoredVarParamList option(returnedType) IS block [ VAR DEF ]
methode -> DEF . boption(STATIC) boption(OVERRIDE) ID factoredVarParamList returnedType ASSIGN expression [ VAR DEF ]
## Transitions:
-- On STATIC shift to state 28
-- On CLASSNAME shift to state 36
-- On boption(STATIC) shift to state 126
## Reductions:
-- On OVERRIDE ID
--   reduce production boption(STATIC) ->

State 36:
## Known stack suffix:
## DEF CLASSNAME
## LR(1) items:
constructor -> DEF CLASSNAME . factoredVarParamList option(superclasseCall) IS block [ VAR RBRACKET DEF ]
## Transitions:
-- On LPAREN shift to state 3
-- On factoredVarParamList shift to state 37
## Reductions:

State 37:
## Known stack suffix:
## DEF CLASSNAME factoredVarParamList
## LR(1) items:
constructor -> DEF CLASSNAME factoredVarParamList . option(superclasseCall) IS block [ VAR RBRACKET DEF ]
## Transitions:
-- On COLON shift to state 38
-- On superclasseCall shift to state 102
-- On option(superclasseCall) shift to state 103
## Reductions:
-- On IS
--   reduce production option(superclasseCall) ->

State 38:
## Known stack suffix:
## COLON
## LR(1) items:
superclasseCall -> COLON . CLASSNAME argumentsList [ IS ]
## Transitions:
-- On CLASSNAME shift to state 39
## Reductions:

State 39:
## Known stack suffix:
## COLON CLASSNAME
## LR(1) items:
superclasseCall -> COLON CLASSNAME . argumentsList [ IS ]
## Transitions:
-- On LPAREN shift to state 40
-- On argumentsList shift to state 101
## Reductions:

State 40:
## Known stack suffix:
## LPAREN
## LR(1) items:
argumentsList -> LPAREN . loption(separated_nonempty_list(COMMA,expression)) RPAREN [ VAR TIMES THEN SEMICOLON SELECTION RPAREN RELOP RBRACKET PLUS MINUS IS DIV DEF COMMA ]
## Transitions:
-- On THIS shift to state 41
-- On SUPER shift to state 51
-- On PLUS shift to state 55
-- On NEW shift to state 56
-- On MINUS shift to state 59
-- On LPAREN shift to state 60
-- On ID shift to state 61
-- On CSTE shift to state 65
-- On CLASSNAME shift to state 70
-- On separated_nonempty_list(COMMA,expression) shift to state 95
-- On methodeCall shift to state 71
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 96
-- On instanciation shift to state 72
-- On expression shift to state 98
-- On expr3 shift to state 75
-- On expr2 shift to state 76
-- On expr1 shift to state 84
-- On containerA shift to state 79
-- On container shift to state 80
-- On castedExpr shift to state 81
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 41:
## Known stack suffix:
## THIS
## LR(1) items:
container -> THIS . SELECTION containerA [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ASSIGN ]
methodeCall -> THIS . SELECTION containerA argumentsList [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ]
## Transitions:
-- On SELECTION shift to state 42
## Reductions:

State 42:
## Known stack suffix:
## THIS SELECTION
## LR(1) items:
container -> THIS SELECTION . containerA [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ASSIGN ]
methodeCall -> THIS SELECTION . containerA argumentsList [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ]
## Transitions:
-- On ID shift to state 43
-- On containerA shift to state 49
## Reductions:

State 43:
## Known stack suffix:
## ID
## LR(1) items:
containerA -> ID . [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS LPAREN DIV DEF COMMA ASSIGN ]
containerA -> ID . SELECTION containerA [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS LPAREN DIV DEF COMMA ASSIGN ]
containerA -> ID . argumentsList SELECTION containerA [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS LPAREN DIV DEF COMMA ASSIGN ]
## Transitions:
-- On SELECTION shift to state 44
-- On LPAREN shift to state 40
-- On argumentsList shift to state 46
## Reductions:
-- On VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS LPAREN DIV DEF COMMA ASSIGN
--   reduce production containerA -> ID
** Conflict on LPAREN

State 44:
## Known stack suffix:
## ID SELECTION
## LR(1) items:
containerA -> ID SELECTION . containerA [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS LPAREN DIV DEF COMMA ASSIGN ]
## Transitions:
-- On ID shift to state 43
-- On containerA shift to state 45
## Reductions:

State 45:
## Known stack suffix:
## ID SELECTION containerA
## LR(1) items:
containerA -> ID SELECTION containerA . [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS LPAREN DIV DEF COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS LPAREN DIV DEF COMMA ASSIGN
--   reduce production containerA -> ID SELECTION containerA

State 46:
## Known stack suffix:
## ID argumentsList
## LR(1) items:
containerA -> ID argumentsList . SELECTION containerA [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS LPAREN DIV DEF COMMA ASSIGN ]
## Transitions:
-- On SELECTION shift to state 47
## Reductions:

State 47:
## Known stack suffix:
## ID argumentsList SELECTION
## LR(1) items:
containerA -> ID argumentsList SELECTION . containerA [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS LPAREN DIV DEF COMMA ASSIGN ]
## Transitions:
-- On ID shift to state 43
-- On containerA shift to state 48
## Reductions:

State 48:
## Known stack suffix:
## ID argumentsList SELECTION containerA
## LR(1) items:
containerA -> ID argumentsList SELECTION containerA . [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS LPAREN DIV DEF COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS LPAREN DIV DEF COMMA ASSIGN
--   reduce production containerA -> ID argumentsList SELECTION containerA

State 49:
## Known stack suffix:
## THIS SELECTION containerA
## LR(1) items:
container -> THIS SELECTION containerA . [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ASSIGN ]
methodeCall -> THIS SELECTION containerA . argumentsList [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ]
## Transitions:
-- On LPAREN shift to state 40
-- On argumentsList shift to state 50
## Reductions:
-- On VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ASSIGN
--   reduce production container -> THIS SELECTION containerA

State 50:
## Known stack suffix:
## THIS SELECTION containerA argumentsList
## LR(1) items:
methodeCall -> THIS SELECTION containerA argumentsList . [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ]
## Transitions:
## Reductions:
-- On VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA
--   reduce production methodeCall -> THIS SELECTION containerA argumentsList

State 51:
## Known stack suffix:
## SUPER
## LR(1) items:
container -> SUPER . SELECTION containerA [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ASSIGN ]
methodeCall -> SUPER . SELECTION containerA argumentsList [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ]
## Transitions:
-- On SELECTION shift to state 52
## Reductions:

State 52:
## Known stack suffix:
## SUPER SELECTION
## LR(1) items:
container -> SUPER SELECTION . containerA [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ASSIGN ]
methodeCall -> SUPER SELECTION . containerA argumentsList [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ]
## Transitions:
-- On ID shift to state 43
-- On containerA shift to state 53
## Reductions:

State 53:
## Known stack suffix:
## SUPER SELECTION containerA
## LR(1) items:
container -> SUPER SELECTION containerA . [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ASSIGN ]
methodeCall -> SUPER SELECTION containerA . argumentsList [ VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ]
## Transitions:
-- On LPAREN shift to state 40
-- On argumentsList shift to state 54
## Reductions:
-- On VAR TIMES THEN SEMICOLON RPAREN RELOP RBRACKET PLUS MINUS DIV DEF COMMA ASSIGN
--   reduce production container -> SUPER SELECTION containerA
